# GDS-Server

./: .gitignore  CMakeLists.txt  GdsServer.cpp  GdsServer.h  README.md  Socket.cpp  Socket.h  main.cpp
resources/: BookResponseSirena.xml  TicketResponseSirena.xml  index.html
